# auto-scheduler

./: .gitignore  Cargo.toml  Dockerfile
migrations/2024-01-11-091742_scheduler/: down.sql  up.sql
src/: constants.rs  error.rs  main.rs  public_key.pem  response.rs  schema.rs  test.rs  utils.rs
src/config/: postgres.rs
src/middleware/: is_manager.rs  jwt.rs  mod.rs
src/models/: employee.rs  mod.rs  schedule.rs  shift_changes.rs  shifts.rs
src/route/: employee.rs  mod.rs  schedule.rs  shift_change.rs
