[package]
name = "scheduler_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.14.0"
derive_more = "0.99.17"
rand = "0.6.5"
csv = "1.3.0"
actix-files = "0.6.5"
mime = "0.3.17"
actix-cors = "0.6.0-beta.4"
http = { version = "0.2.11", features = [] }
